<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/txt_image_doctor"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/tv_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="5dp"
                    android:text="@string/txt_online"
                    android:textAlignment="center"
                    app:drawableStartCompat="@drawable/bg_dot_online" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish_bold_700"
                    android:textSize="16sp"
                    tools:text="@string/txt_doctor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_hospital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_outline_red"
                        android:fontFamily="@font/mulish_regular_400"
                        android:padding="4dp"
                        android:textColor="@color/red_700"
                        android:textSize="11sp"
                        tools:text="@string/txt_hospital" />

                    <TextView
                        android:id="@+id/tv_specialization"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_outline_red"
                        android:fontFamily="@font/mulish_regular_400"
                        android:padding="4dp"
                        android:textColor="@color/red_700"
                        android:textSize="11sp"
                        tools:text="@string/txt_specialization" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mulish_regular_400"
                    android:maxLines="4"
                    android:padding="4dp"
                    android:textSize="12sp"
                    tools:text="@string/txt_desc" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_yellow"
                    android:fontFamily="@font/mulish_regular_400"
                    android:padding="4dp"
                    android:textColor="@color/bw_100"
                    android:textSize="12sp"
                    tools:text="1000" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>