<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/sp_rectangle_main"
                    android:contentDescription="@string/txt_home_background"
                    android:fitsSystemWindows="true" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_hello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulish_regular_400"
                        android:text="@string/txt_hello"
                        android:textColor="@color/bw_100"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulish_bold_700"
                        android:text="@string/txt_name_user"
                        android:textColor="@color/bw_100"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_doctor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/bg_edt_focus"
                        android:fontFamily="@font/mulish_semibold_600"
                        android:gravity="center"
                        android:hint="@string/txt_search"
                        android:inputType="text"
                        android:textCursorDrawable="@color/red_300"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name_user" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search_doctor">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/spinner_hospital"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/bg_edt_focus"
                                android:fontFamily="@font/mulish_semibold_600"
                                android:gravity="center"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/spinner_specialization"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/bg_edt_focus"
                                android:fontFamily="@font/mulish_semibold_600"
                                android:gravity="center"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_doctor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_doctor" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_rv_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <include layout="@layout/item_doctor_shimmer" />
            </com.facebook.shimmer.ShimmerFrameLayout>
        </FrameLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>